unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Package_Rates__c.field-meta.xml
<CustomField>
    <fullName>Package_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Rates</label>
    <type>Checkbox</type>
</CustomField>