unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Part_of_a_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Part_of_a_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of a portfolio?</label>
    <type>Checkbox</type>
</CustomField>