unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Plumbing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plumbing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>