unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Price_Increase_Elec_Labor_Mat__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Elec_Labor_Mat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Increase % Elec Labor Mat</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>