unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Basis__c</fullName>
    <label>Pricing Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% Increase Over Base</fullName>
            </value>
            <value>
                <fullName>Standard City Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>