unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Pricing_Increase_Showsite_Freight__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Increase_Showsite_Freight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pricing Increase % Showsite Freight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>