unpackaged/main/default/objects/Sales_Information_Tool__c/fields/PSP_apply_on_planned_occ__c.field-meta.xml
<CustomField>
    <fullName>PSP_apply_on_planned_occ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does PSP apply on planned occurrence?</label>
    <type>Checkbox</type>
</CustomField>