unpackaged/main/default/objects/Sales_Information_Tool__c/fields/PSP_Impact_2018__c.field-meta.xml
<CustomField>
    <fullName>PSP_Impact_2018__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>PSP Impact 2018</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>