unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Rigging_RY__c.field-meta.xml
<CustomField>
    <fullName>Rigging_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.Rigging__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>