unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Rigging_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Var_YOY__c</fullName>
    <formula>IF( Rigging_RY__c = 0,0,  ((Rigging_PY__c  - Rigging_RY__c)/Rigging_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>