unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Rooms_Comped__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Comped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rooms Comped?</label>
    <type>Checkbox</type>
</CustomField>