unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <description>Show Name associated with Show Occurrence</description>
    <formula>Show__r.Name</formula>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>