unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Open_PY__c.field-meta.xml
<CustomField>
    <fullName>Show_Open_PY__c</fullName>
    <description>Show Open Date on Show Opportunity Occurrence</description>
    <formula>Occurrence_for_Plan__r.Show_Open_Date__c</formula>
    <label>Show Open</label>
    <type>Date</type>
</CustomField>