unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Opportunity_Public_Ref__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity_Public_Ref__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Show Occurrence Referenced</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Show_Occurrence_Public__c.Name</field>
            <operation>notContain</operation>
            <value>&quot;-AV&quot;,&quot;-Housing&quot;,&quot;-Reg&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Sales Information Tools</relationshipLabel>
    <relationshipName>Sales_Information_Tools</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>