unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Org_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Show_Org_Rentals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Org Rentals?</label>
    <type>Checkbox</type>
</CustomField>