unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Org_Total_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Show_Org_Total_VAR_YOY__c</fullName>
    <formula>IF(Show_Org_Total_RY__c = 0,0, ((Show_Org_Total_PY__c - Show_Org_Total_RY__c)/Show_Org_Total_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Org Total VAR YOY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>