unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Risks__c.field-meta.xml
<CustomField>
    <fullName>Show_Risks__c</fullName>
    <label>Show Risks:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>