unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Show_Travel_Days_Union__c.field-meta.xml
<CustomField>
    <fullName>Show_Travel_Days_Union__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Show Travel Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>