unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Crated_OT_OT_RY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Crated_OT_OT_RY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Showsite Crated - OT/OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>