unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Crated_PY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Crated_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Showsite Crated PY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>