unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Crated_ST_OT_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Crated_ST_OT_Var_YOY__c</fullName>
    <formula>IF(Showsite_Special_Handling_ST_OT_RY__c=0,0,(Showsite_Special_Handling_ST_OT_PY__c-Showsite_Special_Handling_ST_OT_RY__c)/Showsite_Special_Handling_ST_OT_RY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showsite Crated - ST/OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>