unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Crated_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Crated_VAR_YOY__c</fullName>
    <formula>IF(Showsite_Crated_Basis_Year_Edit__c = 0,0, 
((Showsite_Crated_Plan_Year_Edit__c - Showsite_Crated_Basis_Year_Edit__c )/Showsite_Crated_Basis_Year_Edit__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showsite Crated VAR YOY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>