unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Freight_Pricing_Percent_Incr__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Freight_Pricing_Percent_Incr__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Showsite Freight Pricing Percent Incr</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>