unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Freight_RY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Freight_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Showsite_Freight__c</formula>
    <label>Showsite Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>