unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Travel_Estimates_Sales_Design__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Travel_Estimates_Sales_Design__c</fullName>
    <formula>Travelers_Sales_Design__c  *Avg_Daily_Cost_Sales_Design__c  *Show_Travel_Days_Sales_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showsite Travel Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>