unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Showsite_Uncrated_ST_ST_RY__c.field-meta.xml
<CustomField>
    <fullName>Showsite_Uncrated_ST_ST_RY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Showsite Uncrated - ST/ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>