unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Signing_Bonuses__c.field-meta.xml
<CustomField>
    <fullName>Signing_Bonuses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signing Bonuses?</label>
    <type>Checkbox</type>
</CustomField>