unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Site_Visits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Visits_Notes__c</fullName>
    <label>Site Visits/Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>