unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Special_Furniture_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Special_Furniture_Var_YOY__c</fullName>
    <formula>IF( Special_Furniture_RY__c = 0,0,  ((Special_Furniture_PY__c  - Special_Furniture_RY__c)/Special_Furniture_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Furniture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>