unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Spending_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Spending_Allowances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spending Allowances?</label>
    <type>Checkbox</type>
</CustomField>