unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Sponsorships__c.field-meta.xml
<CustomField>
    <fullName>Sponsorships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsorships?</label>
    <type>Checkbox</type>
</CustomField>