unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Standard_Modular__c.field-meta.xml
<CustomField>
    <fullName>Standard_Modular__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Standard Modular</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>