unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Std_Furniture_PY__c.field-meta.xml
<CustomField>
    <fullName>Std_Furniture_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Std Furniture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>