unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Std_Modular_RY__c.field-meta.xml
<CustomField>
    <fullName>Std_Modular_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Standard_Modular__c</formula>
    <label>Std Modular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>