unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Std_Modular_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Std_Modular_VAR_YOY__c</fullName>
    <formula>IF(Std_Modular_RY__c = 0,0, ((Standard_Modular__c - Std_Modular_RY__c)/Std_Modular_RY__c) )</formula>
    <label>Standard Modular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>