unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Total_Show_Rev_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Total_Show_Rev_Var_YOY__c</fullName>
    <formula>IF( Total_Show_Rev_RY__c = 0,0,  ((Total_Show_Rev_PY__c  - Total_Show_Rev_RY__c)/Total_Show_Rev_RY__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Show Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>