unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Total_T_E_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_T_E_Total__c</fullName>
    <formula>Total_T_E_ES_OM_AM__c + Total_T_E_Sales_Design__c + Total_T_E_Union__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total T&amp;E</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>