unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Total_T_E_Union__c.field-meta.xml
<CustomField>
    <fullName>Total_T_E_Union__c</fullName>
    <formula>Showsite_Travel_Estimates_Union__c + Add_l_T_E_Costs_Union__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total T&amp;E</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>