unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Travelers_ES_OM_AM__c.field-meta.xml
<CustomField>
    <fullName>Travelers_ES_OM_AM__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Travelers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>