unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Venue_Change__c.field-meta.xml
<CustomField>
    <fullName>Venue_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venue Change?</label>
    <type>Checkbox</type>
</CustomField>