unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_OT_OT_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_OT_OT_Var_YOY__c</fullName>
    <formula>IF(Warehouse_Crated_OT_OT_RY__c =0,0,( Warehouse_Crated_OT_OT_PY__c -Warehouse_Crated_OT_OT_RY__c)/Warehouse_Crated_OT_OT_RY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Crated - OT/OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>