unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_Plan_Year_Edit__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_Plan_Year_Edit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warehouse Crated Plan Year Edit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>