unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_RY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_RY__c</fullName>
    <formula>Show_Opportunity_Public_Ref__r.SIT_Warehouse_Crated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Crated RY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>