unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_ST_OT_RY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_ST_OT_RY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warehouse Crated - ST/OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>