unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_ST_ST_PY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_ST_ST_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warehouse Crated - ST/ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>