unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Crated_VAR_YOY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Crated_VAR_YOY__c</fullName>
    <formula>IF(Warehouse_Crated_Basis_Year_Edit__c = 0,0, 
((Warehouse_Crated_Plan_Year_Edit__c - Warehouse_Crated_Basis_Year_Edit__c)/Warehouse_Crated_Basis_Year_Edit__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Crated VAR YOY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>