unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Spec_H_ling_ST_Var_YOY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Spec_H_ling_ST_Var_YOY__c</fullName>
    <formula>IF(Warehouse_Special_Handling_ST_ST_RY__c =0,0,(Warehouse_Special_Handling_ST_ST_PY__c-Warehouse_Special_Handling_ST_ST_RY__c)/Warehouse_Special_Handling_ST_ST_RY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Spec. H&#39;ling - ST/ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>