unpackaged/main/default/objects/Sales_Information_Tool__c/fields/Warehouse_Special_Handling_OT_OT_PY__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Special_Handling_OT_OT_PY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warehouse Special Handling - OT/OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>