unpackaged/main/default/objects/Sales_Information_Tool__c/fields/X3_Tier_Pricing_App_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>X3_Tier_Pricing_App_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3-Tier Pricing App? - Cleaning</label>
    <type>Checkbox</type>
</CustomField>