unpackaged/main/default/objects/Sales_Information_Tool__c/fields/X3_Tier_Pricing_App_Elec_Labor_Mat__c.field-meta.xml
<CustomField>
    <fullName>X3_Tier_Pricing_App_Elec_Labor_Mat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3-Tier Pricing App? - Elec Labor &amp; Mat</label>
    <type>Checkbox</type>
</CustomField>