unpackaged/main/default/objects/Sales_Information_Tool__c/fields/X3_Tier_Pricing_App_Labor_I_D__c.field-meta.xml
<CustomField>
    <fullName>X3_Tier_Pricing_App_Labor_I_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3-Tier Pricing App? - Labor/I&amp;D</label>
    <type>Checkbox</type>
</CustomField>