unpackaged/main/default/objects/Sales_Information_Tool__c/fields/X3_Tier_Pricing_App_Material_Handling__c.field-meta.xml
<CustomField>
    <fullName>X3_Tier_Pricing_App_Material_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>3-Tier Pricing (ST/ST, ST/OT, OT/OT) Applicable (Y/N)?</inlineHelpText>
    <label>3-Tier Pricing App? - Material Handling</label>
    <type>Checkbox</type>
</CustomField>