unpackaged/main/default/objects/Sales_Information_Tool__c/fields/YRMO_RY__c.field-meta.xml
<CustomField>
    <fullName>YRMO_RY__c</fullName>
    <description>YRMO for Show Opportunity Occurence of Prior/Base Show Used for Comparison</description>
    <formula>Show_Opportunity_Public_Ref__r.YRMO__c</formula>
    <label>YRMO</label>
    <type>Text</type>
</CustomField>