unpackaged/main/default/objects/Sales_Information_Tool__c/recordTypes/Editable.recordType-meta.xml
<RecordType>
    <fullName>Editable</fullName>
    <active>true</active>
    <label>Editable</label>
</RecordType>