unpackaged/main/default/objects/Sales_Information_Tool__c/validationRules/Status_Cannot_equal_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_equal_None</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c, &#39;None&#39;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select a status for your SIT</errorMessage>
</ValidationRule>